Ignore generated presentation artifacts